app/assets/stylesheets/components/_carousel.scss
.carousel .item{
    min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
}
.carousel .item img{
    margin: 0 auto; /* Align slide image horizontally center */
}
.bs-example{
  margin: 20px;
}

.banner-screen {
  width: 550px;
}
.screens {
  display: flex;
  justify-content: center;
  align-items: center;
}

